--- a/app/src/main/res/anim/desv.xml
+++ b/app/src/main/res/anim/desv.xml
@@ -3,9 +3,8 @@
     android:duration="3000">
     <alpha
         android:fromAlpha="0.0"
-        android:toAlpha="2.0"
-        >
+        android:toAlpha="2.0">
 
 
     </alpha>
-    </set>
+</set>
