--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     tools:context="com.androidbolivia.origamidenavidad.MainActivity"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark">
@@ -94,7 +94,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@mipmap/ic_arbol"
                         android:layout_weight="4" />
                 </LinearLayout>
 
@@ -115,7 +115,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@mipmap/ic_estrella"
                         android:layout_weight="4" />
 
 
@@ -138,7 +138,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@mipmap/ic_caja"
                         android:layout_weight="4" />
 
 
