--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
@@ -176,7 +176,7 @@
                             android:text="Jingle Balls version Trap"
                             android:textSize="18dp"
                             android:layout_weight="1"
-                            android:background="@android:color/holo_red_dark"
+                            android:background="@android:color/holo_red_light"
                             android:textColor="@android:color/white"
                             android:layout_gravity="center_vertical"
                             android:onClick="jingle"/>
@@ -198,7 +198,7 @@
                             android:textSize="20dp"
                             android:layout_weight="1"
                             android:id="@+id/textView2"
-                            android:background="@android:color/holo_red_dark"
+                            android:background="@android:color/holo_red_light"
                             android:textColor="@android:color/white"
                             android:layout_gravity="center_vertical"
                             android:onClick="merry"/>
@@ -228,17 +228,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="9"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4" />
+        android:orientation="horizontal"
+        android:weightSum="5">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4" />
+            android:src="@mipmap/ic_stop"
+            android:onClick="stop"
+            android:layout_weight="1"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="SIGUEME EN:"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:gravity="center_vertical"/>
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_github"
+            android:layout_weight="1"
+            android:onClick="github"/>
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_gmail"
+            android:layout_weight="1"
+            android:onClick="gmail"/>
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_facebook"
+            android:layout_weight="1"
+            android:onClick="face"/>
+
+
 
 
     </LinearLayout>
