--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,6 +8,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.androidbolivia.origamidenavidad.SplashScreenActivity">
+    tools:context="com.androidbolivia.origamidenavidad.SplashScreenActivity"
+    android:background="@drawable/fondo">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/tabla"/>
+    <ImageView
+        android:id="@+id/estrellani"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/estrella"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/letra"/>
 
 </RelativeLayout>
